Fix Card width on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -623,4 +623,7 @@ footer ul {
     .project-container div {
         width: 290px;
     }
+    .card {
+        width: 275px;
+    }
 }
